Patched Makefile to compile on Mac OS X 10.6.6.
Note that on Mac OS X it's a bit of an issue to compile statically so I disabled it.
To run this on Mac, you'll need to install FLKT and SDL via fink. After that it's pretty painless.

--- a/src/Makefile
+++ b/src/Makefile
@@ -29,10 +29,10 @@ m: m.fl Bargraph.cxx Bargraph.h Codebox.cxx Codebox.h Cw.cxx Cw.h \
 	g++ -c -Os `fltk-config --cxxflags` Bargraph.cxx	
 	g++ -c -Os `fltk-config --cxxflags` Codebox.cxx
 	g++ -c -Os `fltk-config --cxxflags` Knob.cxx
-	g++ -c -Os `sdl-config    --cflags` Cw.cxx
-	g++ -static -om m.o Bargraph.o Codebox.o Cw.o Knob.o \
-	  `sdl-config --static-libs` \
-	  `fltk-config --ldstaticflags` -ldl
+	g++ -c -Os `sdl-config --cflags` Cw.cxx
+	g++ -o m m.o Bargraph.o Codebox.o Cw.o Knob.o \
+	  `sdl-config --libs` \
+	  `fltk-config --ldflags` -ldl
 	strip m
 	rm *.o m.cxx m.h
 
