--- a/src/Makefile
+++ b/src/Makefile
@@ -7,10 +7,11 @@ CC=g++
 CFLGAGS=
 # This may need to be changed for you. These are the X11 libraries used by
 # ftlk or sdl
-DYLIB=/opt/local/lib/libX11.6.dylib /opt/local/lib/libXext.6.dylib /opt/local/lib/libXrandr.2.dylib /opt/local/lib/libXrender.1.dylib /opt/local/lib/libxcb.1.dylib /opt/local/lib/libXau.6.dylib /opt/local/lib/libXdmcp.6.dylib
+DYLIB=/opt/X11/lib/libX11.6.dylib /opt/X11/lib/libXext.6.dylib /opt/X11/lib/libXrandr.2.dylib /opt/X11/lib/libXrender.1.dylib /opt/X11/lib/libxcb.1.dylib /opt/X11/lib/libXau.6.dylib /opt/X11/lib/libXdmcp.6.dylib
 
 
 Morse.app: Bargraph.o Codebox.o Cw.o Knob.o Help.h m.o Info.plist
+	rm -rf Morse.app
 	mkdir -p Morse.app/Contents/MacOS
 	mkdir    Morse.app/Contents/plugins
 	mkdir    Morse.app/Contents/Resources
